--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,7 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    shared_preferences: "<newest version>"
-
-
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
+  shared_preferences: ^2.1.0
   cupertino_icons: ^1.0.2
 
 dev_dependencies:
